Add deployment guide and update Kubernetes config
Added a comprehensive DEPLOYMENT_GUIDE.md for step-by-step deployment instructions. Updated docs/PROJECT_DOCUMENTATION.md with links to beginner Docker and Kubernetes guides. Modified kubernetes/deployment.yaml to set imagePullPolicy, expose container port 8000, and improve resource specification.

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,7 +17,10 @@ spec:
     spec:
       containers:
       - image: hospital-scheduler-api:latest
+        imagePullPolicy: IfNotPresent
         name: hospital-scheduler-api
+        ports:
+        - containerPort: 8000
         resources:
           requests:
             cpu: 100m
